--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,8 @@ target/classes/spring-context.xml
 target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
 target/m2e-wtp/web-resources/META-INF/maven/com.multiagent.hawklithm/Cerberus/pom.properties
 target/m2e-wtp/web-resources/META-INF/maven/com.multiagent.hawklithm/Cerberus/pom.xml
+src/webapp/.idea/workspace.xml
+src/webapp/.idea/workspace.xml
+src/webapp/.idea/workspace.xml
+src/webapp/.idea/workspace.xml
+src/webapp/.idea/workspace.xml
