some about item and process info interface

--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,4 @@ src/webapp/.idea/workspace.xml
 src/webapp/.idea/workspace.xml
 src/webapp/.idea/workspace.xml
 src/webapp/.idea/workspace.xml
+src/webapp/.idea/workspace.xml
